# langchain-qortex

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: vectorstore-guide.md  vectorstore.md
langchain_qortex/: __init__.py  embeddings.py  vectorstores.py
tests/integration_tests/: test_e2e.py
tests/unit_tests/: test_embeddings.py  test_imports.py  test_vectorstore.py
